[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
documentation = "https://docs.rs/diskvec/"
description = "A thread-safe, on-disk vector for Copy types"
repository = "https://github.com/krl/diskvec"
license = "GPL-3.0"
name = "diskvec"
version = "0.1.2"

[dependencies]
memmap = "0.5.2"
parking_lot = "0.4.8"

[dev-dependencies]
tempdir = "0.3.5"
